CHANNELMGR-2456 Ensure blue focus ring is visible on variant-delete btn

--- a/channel-manager/frontend/src/main/resources/org/onehippo/cms7/channelmanager/ChannelManagerPerspective.css
+++ b/channel-manager/frontend/src/main/resources/org/onehippo/cms7/channelmanager/ChannelManagerPerspective.css
@@ -688,6 +688,10 @@
   overflow-x: hidden !important;
 }
 
+.br-delete-variant-btn {
+  margin-top: 2px;
+}
+
 .componentPropertiesForm .x-item-disabled .x-form-trigger-over {
   background-position: 50% 50% !important;
 }
